SERVER-57228 Config Server crashes when updating FCV using an inconsistent FCV document